# QueryCraft-AI

./: .gitignore  README.md
Code/backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
Code/backend/.chainlit/translations/: bn.json  en-US.json  he-IL.json  hi.json  ja.json  ml.json  te.json
Code/backend/app/: test.py
Code/backend/app/agent/: graph.py
Code/backend/app/core/: app_state.py  config.py  constants.py  database.py  langfuse.py  logging.py
Code/backend/mcp/: prompts.py  resources.py
Code/backend/tests/: test_streaming.py
Code/frontend/: .env.example  README.md
Code/frontend/src/: middleware.ts
MCP Text-SQL/backend/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  langgraph.json  main.py  my_cl_app.py  pyproject.toml
MCP Text-SQL/backend/.chainlit/: config.toml
MCP Text-SQL/backend/.chainlit/translations/: fr-FR.json  gu.json  kn.json  mr.json  nl.json  ta.json  zh-CN.json
MCP Text-SQL/backend/app/agent/: graph.py  state.py
MCP Text-SQL/backend/app/api/routes/: __init__.py  chat.py  collections.py  documents.py  health.py  items.py
MCP Text-SQL/backend/app/core/: auth.py  config.py  constants.py  database.py  logging.py  memory.py  rate_limiter.py
MCP Text-SQL/backend/app/experiments/: auth_test.py  graph_test.py  mcp_test.py  memory_test.py
MCP Text-SQL/backend/app/models/: __init__.py  collection.py  embedding.py  item.py
MCP Text-SQL/backend/app/schemas/: __init__.py  app.py  app_state.py  chat.py  collection.py  document.py  memory.py
MCP Text-SQL/backend/app/services/: embbedings.py  memory.py
MCP Text-SQL/backend/app/utils/: document_processor.py  util.py
MCP Text-SQL/backend/mcp/: prompts.py  resources.py  server.py  server_test.py  tools.py
MCP Text-SQL/backend/migrations/: env.py
MCP Text-SQL/backend/migrations/versions/: 6b139e0b2e7b_initial_migration.py
MCP Text-SQL/backend/tests/: test_streaming.py
MCP Text-SQL/frontend/: .env.example  README.md  package-lock.json  package.json
Services/: .env.example  .gitignore  README.md  docker-compose.db.yaml  docker-compose.langfuse.yaml  docker-compose.yaml  docker-compose.zitadel.yaml  init-databases.sql  init.sql
Zitadel Auth Server/: .env  README.md  docker-compose.yaml  login-client.pat
(+73 files in other folders)
